his 11: Mod post.java.lang.Math

--- a/_posts/2018-01-04-java.lang.Math.md
+++ b/_posts/2018-01-04-java.lang.Math.md
@@ -47,7 +47,7 @@ description: Math 클래스에서 자주사용하는 메소드 정리.
 		</tr>
         <tr>
 			<td>Math.random()</td>
-			<td>0.0 - 1.0사이 난수를 반환</td>
+			<td>0.0<=n<1.0사이 난수(double)를 반환</td>
 		</tr>
 	</tbody>
 </table>
@@ -70,7 +70,9 @@ System.out.println(Math.round(n));
 3
 ```
 -----------------------
-첫번째 소수점이 아닌 원하는 소수점 아래에서 반올림을 할때 Math.round를 활용할 수 있다.
+
+첫번째 소수점이 아닌 원하는 소수점 아래에서 반올림을 할때 Math.round를 활용할 수 있다. 다음은 소수점 2번째 자리에서 반올림을 하는 예제이다.
+
 ```
 double n = 3.69;
 
