--- a/_posts/2018-01-04-java.lang.Math.md
+++ b/_posts/2018-01-04-java.lang.Math.md
@@ -60,26 +60,26 @@ description: Math 클래스에서 자주사용하는 메소드 정리.
 ### Math.round(n)
 
 Math.round는 소수 첫번째 아래에서 반올림을 한다.
-```
+```java
 double n = 3.14;
 		
 System.out.println(Math.round(n));
 ```
 <span class="olive">결과화면</span>
-```
+```java
 3
 ```
 -----------------------
 
 첫번째 소수점이 아닌 원하는 소수점 아래에서 반올림을 할때 Math.round를 활용할 수 있다. 다음은 소수점 2번째 자리에서 반올림을 하는 예제이다.
 
-```
+```java
 double n = 3.69;
 
 System.out.println(Math.round(n*10)/10.0);
 ```
 <span class="olive">결과화면</span>
-```
+```java
 3.7
 ```
 
